# MGPoisson

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  face_box.cpp  face_box.hpp  fill_boundary.hpp  multipole.hpp  test_poisson.cpp  test_poisson.hpp
