cmake_minimum_required(VERSION 3.16)
project(MGPoisson VERSION 1.0
  DESCRIPTION "Multigrid Poisson solver"
  LANGUAGES CXX C)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/extern/amrex/Tools/CMake)
include(CTest)

set(AMReX_SPACEDIM 2 CACHE STRING "" FORCE)
set(AMReX_MPI ON CACHE BOOL "" FORCE)
set(AMReX_AMRLEVEL OFF CACHE BOOL "" FORCE)
set(AMReX_PROBINIT OFF CACHE BOOL "" FORCE)
set(AMReX_LINEAR_SOLVERS ON CACHE BOOL "" FORCE)
set(AMReX_ASSERTIONS OFF CACHE BOOL "" FORCE)
set(AMReX_FPE OFF CACHE BOOL "" FORCE)
set(AMReX_TINY_PROFILE OFF CACHE BOOL "" FORCE)

if(AMReX_GPU_BACKEND MATCHES "CUDA")
  enable_language(CUDA)
  set(AMReX_CUDA_FASTMATH OFF CACHE BOOL "" FORCE)
  set(CMAKE_CUDA_FLAGS "--fmad=false" CACHE STRING "" FORCE)
  if(CMAKE_VERSION VERSION_LESS 3.20)
    include(AMReX_SetupCUDA)
  endif(CMAKE_VERSION VERSION_LESS 3.20)
endif(AMReX_GPU_BACKEND MATCHES "CUDA")

add_subdirectory(${PROJECT_SOURCE_DIR}/extern/amrex ${PROJECT_BINARY_DIR}/amrex)
add_subdirectory(${PROJECT_SOURCE_DIR}/src ${PROJECT_BINARY_DIR}/src)
